@@ -1,23 +1,22 @@
-package com.example.testgame.gameplay;
+package com.colegiovivas.lapandemia.gameplay;
 
 import com.badlogic.gdx.Gdx;
-import com.badlogic.gdx.assets.AssetManager;
 import com.badlogic.gdx.graphics.g2d.Animation;
 import com.badlogic.gdx.graphics.g2d.Batch;
 import com.badlogic.gdx.graphics.g2d.TextureAtlas;
 import com.badlogic.gdx.graphics.g2d.TextureRegion;
 import com.badlogic.gdx.scenes.scene2d.Actor;
 import com.badlogic.gdx.scenes.scene2d.Touchable;
-import com.example.testgame.MyTestGame;
-import com.example.testgame.level.Fan;
+import com.colegiovivas.lapandemia.LaPandemia;
+import com.colegiovivas.lapandemia.level.Fan;
 
 public class FanActor extends Actor {
     private final Animation<TextureRegion> animation;
     private final Fan fan;
-    private final MyTestGame game;
+    private final LaPandemia game;
     private float elapsedTime;
 
-    public FanActor(final Fan fan, final MyTestGame game) {
+    public FanActor(final Fan fan, final LaPandemia game) {
         this.fan = fan;
         this.game = game;
         this.animation = new Animation<TextureRegion>(1f/5f,
